# ResNet-ONNX

./: .gitignore  CMakeLists.txt  README.md
models/: download_models.py
src/: main.cpp  post_processing.hpp  pre_processing.hpp
